<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.iia.fabien.agregateur.views.activities.CreateReservationActivity"
    tools:showIn="@layout/activity_create_reservation">

    <EditText
        android:id="@+id/dateDebutResaDisplay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:enabled="false"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/dateDebutResaPicker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/dateDebutResaPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:text="@string/dateDebut"
        app:layout_constraintBaseline_toBaselineOf="@+id/dateDebutResaDisplay"
        app:layout_constraintRight_toRightOf="parent"
        android:onClick="showDateDebutPicker"/>

    <EditText
        android:id="@+id/dateFinResaDisplay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:enabled="false"
        app:layout_constraintEnd_toStartOf="@+id/reserveButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateDebutResaDisplay" />

    <Button
        android:id="@+id/dateFinResaPicker"
        android:layout_width="128dp"
        android:layout_height="48dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="13dp"
        android:text="@string/dateFin"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateDebutResaDisplay"
        android:onClick="showDateFinPicker"/>

    <Spinner
        android:id="@+id/reservableSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateFinResaDisplay" />

    <Button
        android:id="@+id/reserveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/reserver"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reservableSpinner"
        android:onClick="onReserver"/>

</android.support.constraint.ConstraintLayout>
